corrected the huggingface icon position and text alignment and view

--- a/style.css
+++ b/style.css
@@ -706,7 +706,7 @@ form .btn-2{
     display: block;
     z-index: 250;
 }
-#hug{
+/* #hug{
     padding: 0 0 0 0;
     margin: 0 0 0 0;
-}
+} */
